--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "grunt-macreload": "*",
     "grunt-css": "jcvernaleo/grunt-css#master",
     "grunt-markdown": "~0.5.0",
-    "grunt-angular-gettext": "^0.2.15"
+    "grunt-angular-gettext": "2.1.11"
   },
   "engines": {
     "node": "0.10.40",
